Changelog
=========

0.3 (xx.xx.20xx)
~~~~~~~~~~~~~~~~
 * Enabled source comments when DEBUG is True; can be overridden with the LIBSASS_SOURCE_COMMENTS setting
 * Added LIBSASS_OUTPUT_STYLE setting

0.2 (22.05.2014)
~~~~~~~~~~~~~~~~
 * Made compatible with django-compressor 1.4 and Python 3.

0.1 (05.03.2014)
~~~~~~~~~~~~~~~~
 * Initial release.